--- a/app/src/main/res/layout/intro_cadastro.xml
+++ b/app/src/main/res/layout/intro_cadastro.xml
@@ -14,10 +14,8 @@
         android:layout_marginEnd="32dp"
         android:layout_marginRight="32dp"
         android:layout_marginBottom="8dp"
-        android:background="@color/colorPrimary"
         android:onClick="btnRegister"
-        android:text="Cadastre-se"
-        android:textColor="@android:color/white" />
+        android:text="Cadastre-se"/>
 
     <TextView
         android:id="@+id/text_Enter"
